Tweaks for improved UX  - Added a large_text css class  - Added javascript disabled warning to tick-tac-godot page  - Added javascript disabled warning to letter-boxed-solver page  - Removed toolbar background when at top of projects page  - Prevented CSS animation on index from covering logo and toolbar buttons

--- a/assets/styles/shared.css
+++ b/assets/styles/shared.css
@@ -241,7 +241,8 @@ iframe.embedded_godot {
 
 .text,
 .text_left,
-.small_text {
+.small_text,
+.large_text {
     color: var(--text-mute-color);
     font-size: 18px;
     text-align: center;
@@ -255,6 +256,10 @@ iframe.embedded_godot {
 
 .small_text {
     font-size: 15px;
+}
+
+.large_text {
+    font-size: 21px;
 }
 
 /*
